# specter

./: .coveragerc  .gitignore  .readthedocs.yml  .travis.yml  LICENSE.md  LICENSE.rst  MANIFEST.in  README.md  README.rst  setup.cfg  setup.py
.github/workflows/: python-package.yml
data/sky/: README.rst  README_sky.md  sky-uves.fits
data/test/: README.rst  README_testdata.md  psf-gausshermite.fits  spec-001.fits  spec-004.fits  spec-005.fits  spec-006.fits  spec-007.fits  spec-008.fits  spec-010.fits  spec-012.fits  spec-014.fits  spec-019.fits  spec-024.fits  spec-026.fits  spec-028.fits  spec-030.fits  spec-031.fits  spec-032.fits  throughput.fits
dev/: DivideAndConquer.ipynb  README.md  README.rst
dev/bigboss/: README.rst  README_bigboss.md  bbthru.py  spots2psf.py
dev/boss/: README.rst  README_boss.md  spZbestSpectra.py
doc/: api.rst  changes.rst  conf.py  data_files.rst  datamodel.md  index.rst  release_notes.rst
doc/datamodel/: extracted_spectra.md  extracted_spectra.rst  index.rst  input_spectra.md  input_spectra.rst  output_image.rst  psf.md  psf.rst  throughput.rst
doc/nb/: unmasked_cosmics.ipynb
etc/: Dockerfile  conftest.py  specter.module  travis_env_common.sh
py/: __init__.py  io.py  throughput.py  util.py
py/extract/: README_extract.txt  __init__.py  ex1d.py  ex2d.py
py/psf/: __init__.py  gausshermite.py  pixpsf.py  psf.py  spotgrid.py  throughput.py
py/specter/: __init__.py  _version.py  io.py  throughput.py
py/specter/data/: ZenExtinct-KPNO.fits  sky-uves.fits
py/specter/extract/: README.rst  README_extract.txt  __init__.py  ex1d.py  ex2d.py
py/specter/psf/: __init__.py  gausshermite.py  gausshermite2.py  monospot.py  pixpsf.py  psf.py  spotgrid.py  spotgrid_less.py  spotgrid_old.py  spotgrid_python_lists.py  spotgrid_rebin.py
py/specter/test/: __init__.py  specter_test_suite.py  squeeze_gausshermite_psf.py  squeeze_spot_psf.py  test_binscripts.py  test_extract.py  test_pixspline.py  test_psf.py  test_specio.py  test_throughput.py  test_util.py  write_input_spectra.py
py/specter/util/: __init__.py  cachedict.py  pixspline.py  traceset.py  util.py
py/specter/zfit/: zfit.py
py/test/: __init__.py  test_bin.py  test_binscripts.py  test_extract.py  test_psf.py  test_throughput.py  test_util.py
py/throughput/: __init__.py  photons.py  throughput.py
py/util/: __init__.py  cachedict.py  pixelsplines.py  pixspline.py  traceset.py  util.py
py/zfit/: zfit.py
test/: squeeze_spot_psf.py  test_psf.py  test_specio.py  test_throughput.py
test/data/: spec-002.fits  spec-010.fits  spec-011.fits  spec-013.fits  spec-015.fits  spec-016.fits  spec-021.fits  spec-022.fits  spec-024.fits  spec-025.fits  spec-027.fits  spec-029.fits  spec-032.fits
(+34 files in other folders)
