[metadata]
name = specter
version = attr: specter.__version__
author = DESI Collaboration
author_email = desi-data@desi.lbl.gov
license = BSD-3-Clause
license_files = LICENSE.rst
url = https://github.com/desihub/specter
description = A toolkit for spectroperfectionism with multi-object spectrographs.
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = True
github_project = desihub/specter
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Utilities

[options]
zip_safe = True
package_dir =
    =py
# find_namespace avoids a warning about data directories when building packages.
packages = find_namespace:
include_package_data = True
python_requires = >=3.10
# setup_requires = setuptools_scm
install_requires =
    astropy
    fitsio
    numba
    scipy
scripts =
    bin/exspec
    bin/merge_bundles
    bin/specter

# [options.entry_points]
# console_scripts =

[options.extras_require]
# Some specter code drops into IPython for debugging.g
all =
    ipython
test =
    pytest
coverage =
    pytest-cov
    coveralls
doc =
    Sphinx
    sphinx-rtd-theme

[options.package_data]
specter = data/*
specter.test = t/*

[options.packages.find]
where = py
exclude = .github/*

[coverage:run]
relative_files = True
source =
    py/specter
omit =
    py/specter/_version.py
    py/specter/conftest*
    py/specter/test/*
    */specter/_version.py
    */specter/conftest*
    */specter/test/*

# [coverage:paths]
# source =
#     py/specter/
#     */site-packages/specter/

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_

[pycodestyle]
# See https://pycodestyle.readthedocs.io/en/latest/intro.html#configuration
# for details of these configuration options.
#
# These are normally ignored by default:
# ignore = E121, E123, E126, E133, E226, E241, E242, E704, W503, W504
#
# This one is not ignored, but modified by max-line-length.
# - E501: line too long (82 > 79 characters)
max-line-length = 160
